--- a/src/tv/index.html
+++ b/src/tv/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html manifest="app.manifest">
+<!-- <html manifest="app.manifest"> -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
