New client download page from Jenny

--- a/src/tv/download-client.html
+++ b/src/tv/download-client.html
@@ -1,11 +1,89 @@
-<!DOCTYPE html>
+  <!DOCTYPE HTML>
+
 <html>
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no, minimal-ui">
-    <title>SoundScape Client Download</title>
+
+<title>SoundScape Download Page</title>
+
+<style>
+body {background-image: url('images/bg_speaker.jpg');
+background-repeat: no-repeat;
+background-attachment: fixed;
+background-position: center;
+color:#ffffff;
+font-family: 'roboto light', 'Helvetica Neue', Arial, sans-serif;
+text-align: center;
+font-weight: 200;
+font-size: 18px;
+}
+
+header{
+margin: 40px 0px 40px 0px;}
+
+h1{font-size: 32px;
+font-weight: 200;
+margin:20px 0px 40px 0px;}
+
+a {color: #ef6c00;
+text-decoration: none;}
+a:hover{
+  color: #ef6c00;
+}
+
+.btn {
+  -webkit-border-radius: 4;
+  -moz-border-radius: 4;
+  border-radius: 4px;
+  font-family: Arial;
+  color: #ef6c00;
+  font-size: 22px;
+  background: #ffffff;
+  padding: 10px 20px 10px 20px;
+  text-decoration: none;
+  width: 50%;
+  margin:40px 0px 40px 0px;
+}
+
+.btn:hover {
+  background: #e8e8e8;
+  text-decoration: none;
+}
+</style>
+
 </head>
+
+ 
+
 <body>
-    <a href="http://multiscreen.samsung.com/examples/soundscape/android/android-audioplayer-latest.apk">Android Client</a>
+
+<div id="wrapper">
+
+ 
+
+<!-- start html block -->
+
+<header><img src="images/logo.png" width="70%"></header>
+
+
+<section class="content">
+<h1>Android Download Instructions</h1>
+
+<p>NOTE: Check your Security Settings <br>and make sure Unknown Sources is checked.<p>
+
+<p><img src="images/img_2.png" width="80%"></p>
+<center>
+<div class="btn"><a href="http://multiscreen.samsung.com/examples/soundscape/android/android-audioplayer-latest.apk">Download SoundScape</a></div>
+</center>
+
+</section>
+<!-- end html block -->
+
+ 
+
+</div>
+
 </body>
+
+ 
+
 </html>
